# automated-outreach-pipeline

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: router.py
app/api/dependencies/: pagination.py  security.py
app/api/middleware/: request_context.py
app/api/routes/: campaigns.py  companies.py  contacts.py  emails.py  pipeline.py
app/cli/: main.py
app/core/: config.py  errors.py  logging.py  security.py
app/database/: __init__.py  session.py
app/models/: __init__.py  campaign.py  company.py  contact.py  email.py  enums.py
app/repositories/: __init__.py  base.py  campaigns.py  companies.py  contacts.py  emails.py
app/schemas/: __init__.py  campaign.py  company.py  contact.py  email.py
app/services/: __init__.py  cache.py  dto.py  factory.py  http.py
app/services/ai/: __init__.py  email_generator.py
app/services/brevo/: __init__.py  client.py
app/services/eazyreach/: __init__.py  client.py
app/services/ocean/: __init__.py  client.py
app/services/prospeo/: __init__.py  client.py
app/tasks/: celery_app.py  pipeline.py
app/tests/: conftest.py  test_api.py  test_api_extra.py  test_provider_clients.py  test_repositories.py  test_services.py  test_workflow.py
app/workflows/: __init__.py  pipeline.py
docs/: Automated_Outreach_Pipeline_Project_Report.docx
migrations/: README  env.py
migrations/versions/: 0001_initial.py
