[project]
name = "outreach-pipeline"
version = "1.0.0"
description = "Automated company discovery, decision-maker lookup, AI email generation, and Brevo sending pipeline."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.35,<1.0",
    "typer>=0.16,<1.0",
    "SQLAlchemy>=2.0.40,<3.0",
    "alembic>=1.16,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.10,<3.0",
    "httpx>=0.28,<1.0",
    "redis>=6.0,<7.0",
    "celery[redis]>=5.5,<6.0",
    "openai>=2.0,<3.0",
    "python-multipart>=0.0.20,<1.0",
]

[project.scripts]
app = "app.main:app"
outreach = "app.cli.main:cli"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
ignore_missing_imports = true
exclude = ["migrations/", "app/tests/"]

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=80"
testpaths = ["app/tests"]
filterwarnings = [
    "error",
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]
